# rust-zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.sqlx/: query-a5d2be8ac6b6572ade1e0295a466a9de526330c7086796bc469465ddcb0d66b4.json
configuration/: base.yaml  production.yaml
migrations/: 20240401145816_create_subscriptions_table.sql  20240418200235_make_status_not_null_in_subscriptions.sql  20240418200822_create_subscription_tokens_table.down.sql  20240418200822_create_subscription_tokens_table.sql  20240519172855_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newletters.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  mod.rs
src/routes/admin/password/: change_password.html  get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
