[package]
name = "rust-zero2prod"
version = "0.1.0"
authors = ["Kevin Sullivan <kevin.sullivan@fake.email"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We can use any path here, but follow community convention
# Can specify a library name using 'name' field.
# If unspecified, defaults to 'package.name', which we want
path = "src/lib.rs"
name = "zero2prod"

# [[Double Square Brackets]] = Array in TOML
# You only get on library per project, but multiple binaries you desired
# Let's you manage multiple libraries in same repo
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = "4.5.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.82"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.0"
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
env_logger = "0.11.3"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
log = "0.4.21"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.6.0"

